src/test/run-pass/test-main-not-dead-attr.rs
// compile-flags: --test

#![feature(main)]

#![deny(dead_code)]

#[main]
fn foo() { panic!(); }
